2002-05-01  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-recordset.c: 
	(gda_recordset_get_value_at): fixed little bug.

	* libgda/Makefile.am:
	* libgda/gda-config.c: reimplemented configuration stuff without
	using gconf.

	* configure.in: removed gconf stuff.

	* testing/client.c:
	* testing/postgres-test.h: activate postgres tests.



2002-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-recordset.c (gda_recordset_get_n_rows): implemented.
	(gda_recordset_get_n_columns): implemented.
	(gda_recordset_get_value_at): made it work.

2002-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_provider_list): only load
	*real* plugins (.so files).

	* libgda/gda-recordset.[ch] (gda_recordset_new): added extra
	parameter, to be passed over to the callback functions.

	* libgda/gda-client.c (gda_client_open_connection): g_object_ref the
	providers we load, to always keep a copy in memory.

	* providers/*/*: adapted to new changes in gda_recordset_new.

	* providers/mysql/Makefile.am: fixed typo.

2002-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-server-recordset-model.[ch]: removed files I forgot to
	remove.

2002-04-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: added GModule to list of dependencies.

	* libgda/Makefile.am: define LIBGDA_PLUGINDIR.

	* libgda/gda-init.c (gda_init): check that GModule is supported.

	* libgda/gda-config.h: removed CORBA-related fields in the
	GdaProviderInfo structure.

	* libgda/gda-config.c (gda_config_get_provider_list): implemented
	for the new non-CORBA architecture.
	(gda_config_free_provider_info): don't free non-existant-anymore
	fields.

	* libgda/gda-client.c (gda_client_open_connection): actually load
	the different plugins containing the providers.

	* testing/config.c: don't use non-existant-anymore fields. Also,
	just list sections and keys for libgda, not all the GConf database.
