@@ -1,18 +1,0 @@
-<?xml version="1.0"?>
-<gconfschemafile>
-  <schemalist>
-  
-    <schema>
-      <applyto>/apps/libgda/MaxLastConnections</applyto>
-      <key>/schemas/apps/libgda/MaxLastConnections</key>
-      <owner>gnome</owner>
-      <type>int</type>
-      <default>10</default>
-      <locale name="C">
-        <short>Number of connections to keep in history</short>
-	<long></long>
-      </locale>
-    </schema>
-    
-  </schemalist>
-</gconfschemafile>
